<resources>
    <string name="app_name">Крестики-Нолики</string>
    <string name="begin_as">Начинать</string>
    <string name="first">первым</string>
    <string name="second">вторым</string>
    <string name="field_size">Размер поля %d на %d, для победы: %d</string>
    <string name="game_level">Уровень игры: %d</string>
    <string name="move_time">Время на ход: %d сек.</string>
    <string name="error">Ошибка:&#160;</string>
    <string name="start">Начать</string>
    <string name="settings">Настройки</string>
    <string name="drawn">Ничья. Сыграем еще?</string>
    <string name="win_gamer">Вы победили! Сыграем еще?</string>
    <string name="win_opponent">Победил противник. Сыграем еще?</string>
    <string name="aborted_game">Игра прервана</string>
    <string name="wait_opponent">Ожидание противника…</string>
    <string name="single_game">Одиночная игра</string>
    <string name="create_remote">Создать сетевую</string>
    <string name="connect">Подключиться</string>
    <string name="nick">Никнейм</string>
    <string name="create">Создать</string>
    <string name="unavailable_nick">Недоступный ник</string>
    <string name="wait_cross">Ожидается игрок за Крестики</string>
    <string name="wait_zero">Ожидается игрок за Нолики</string>
    <string name="time_gamer">На ваш ход %d сек</string>
    <string name="time_opponent">На ход оппонента %d сек</string>
    <string name="connect_opponent">Подключился игрок %s</string>
    <string name="timeout">Время вышло</string>
    <string name="calc">Расчитать</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">IDx83YYoFGvStpGouDuqZc4g8qF4vKUGuuNkGPcC</string>
    <string name="back4app_client_key">IrxbE17QQH3RoLGlbdgRfbWewcfTGMxSO26x7c5F</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_never_show">  <u><i>Больше не показывать</i></u></string>
    <string name="txt_skip"><u><i>Пропустить</i></u></string>
</resources>