<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/big_indent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_begin_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_indent"
        android:layout_marginTop="@dimen/big_indent"
        android:text="@string/begin_as"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/big_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/bg_begin_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_indent"
        android:layout_marginEnd="@dimen/big_indent"
        app:layout_constraintStart_toEndOf="@id/tv_begin_as"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_first"
            style="@style/ButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_second"
            style="@style/ButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textAllCaps="false" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/l_fieldsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_indent"
        android:background="@drawable/field_with_border"
        android:orientation="vertical"
        android:padding="@dimen/normal_indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_begin_as">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fieldsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_indent"
            android:padding="@dimen/normal_indent"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/normal_text" />

        <SeekBar
            android:id="@+id/sb_fieldsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_indent"
            android:max="12"
            android:progress="1"
            android:progressTint="?attr/colorPrimary"
            android:thumbTint="?attr/colorPrimary" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_indent"
        android:text="@string/start"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_fieldsize" />

</androidx.constraintlayout.widget.ConstraintLayout>