<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nick"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/maxLengthNick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nick"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pb_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/normal_indent"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/til_nick"
        app:layout_constraintTop_toTopOf="@id/til_nick" />

    <ImageView
        android:id="@+id/iv_ok"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/pb_nick"
        app:layout_constraintEnd_toEndOf="@id/pb_nick"
        app:layout_constraintStart_toStartOf="@id/pb_nick"
        app:layout_constraintTop_toTopOf="@id/pb_nick" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_begin_as"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/big_indent"
        android:gravity="center_vertical"
        android:text="@string/begin_as"
        app:layout_constraintBottom_toBottomOf="@id/bg_begin_as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_begin_as" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/bg_begin_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_indent"
        android:layout_marginEnd="@dimen/big_indent"
        app:layout_constraintStart_toEndOf="@id/tv_begin_as"
        app:layout_constraintTop_toBottomOf="@id/til_nick"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_first"
            style="@style/ButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_second"
            style="@style/ButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/l_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_indent"
        android:background="@drawable/field_with_border"
        android:orientation="vertical"
        android:padding="@dimen/normal_indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_begin_as">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_indent"
            android:padding="@dimen/normal_indent" />

        <SeekBar
            android:id="@+id/sb_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_indent"
            android:max="4"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_fieldsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_indent"
        android:background="@drawable/field_with_border"
        android:orientation="vertical"
        android:padding="@dimen/normal_indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_level">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fieldsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_indent"
            android:padding="@dimen/normal_indent" />

        <SeekBar
            android:id="@+id/sb_fieldsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_indent"
            android:max="12"
            android:progress="1" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_indent"
        android:background="@drawable/field_with_border"
        android:orientation="vertical"
        android:padding="@dimen/normal_indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_fieldsize">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_indent"
            android:padding="@dimen/normal_indent"
            app:layout_constraintEnd_toStartOf="@id/cb_calc_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_calc_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/calc"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/sb_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_indent"
            android:max="110"
            android:progress="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_time" />

</androidx.constraintlayout.widget.ConstraintLayout>