<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_refresh"
        android:layout_width="50dp"
        android:layout_height="0dp"
        app:icon="@drawable/ic_refresh"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@id/bg_begin_as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bg_begin_as"
        app:layout_constraintTop_toTopOf="@id/bg_begin_as" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_begin_as"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/big_indent"
        android:gravity="center_vertical"
        android:text="@string/begin_as"
        app:layout_constraintBottom_toBottomOf="@id/bg_begin_as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_begin_as" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/bg_begin_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_indent"
        android:layout_marginEnd="@dimen/big_indent"
        app:layout_constraintStart_toEndOf="@id/tv_begin_as"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_first"
            style="@style/ButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_second"
            style="@style/ButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_games"
        android:layout_width="match_parent"
        android:layout_height="@dimen/games_list_height"
        android:layout_marginTop="@dimen/normal_indent"
        android:paddingBottom="@dimen/normal_indent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_begin_as" />

    <View
        android:id="@+id/v_block"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/translucent_bg"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/rv_games"
        app:layout_constraintEnd_toEndOf="@id/rv_games"
        app:layout_constraintStart_toStartOf="@id/rv_games"
        app:layout_constraintTop_toTopOf="@id/rv_games" />

    <ProgressBar
        android:id="@+id/pb_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rv_games"
        app:layout_constraintEnd_toEndOf="@id/rv_games"
        app:layout_constraintStart_toStartOf="@id/rv_games"
        app:layout_constraintTop_toTopOf="@id/rv_games" />

</androidx.constraintlayout.widget.ConstraintLayout>